fix: border style bug in delete buttons

--- a/src/app/_template/template-todo/template-todo.component.sass
+++ b/src/app/_template/template-todo/template-todo.component.sass
@@ -53,6 +53,7 @@
         color: $white
         font-size: $cube*2
         padding: $cube*2
+        border-left: solid $cube*0.1 $second
         cursor: pointer
         span
             height: 100%
