feat: add spinner to header

--- a/src/app/_template/template-header/template-header.component.html
+++ b/src/app/_template/template-header/template-header.component.html
@@ -1,3 +1,10 @@
 <header>
-    <h1>Do<br><span>Your</span><br>Stuff</h1>
+    <h1>
+        Do<br>
+        <span>
+            Y<app-header-spinner></app-header-spinner>ur
+        </span>
+        Stuff
+    </h1>
 </header>
+
