--- a/src/app/_template/template-todo-form/template-todo-form.component.sass
+++ b/src/app/_template/template-todo-form/template-todo-form.component.sass
@@ -43,4 +43,8 @@
             flex-flow: row
             justify-content: center
             align-items: center
+    .isDisabled
+            opacity: 0.6
+            background-color: $grey
+            cursor: default
 
