fix: disable-txtfield-bug in done todos

--- a/src/app/_template/template-todo/template-todo.component.sass
+++ b/src/app/_template/template-todo/template-todo.component.sass
@@ -70,6 +70,7 @@
             input
                 opacity: 0.3
                 text-decoration: line-through
+                pointer-events: none 
 
 
 
